--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
   <body>
     <h1>Darren's Recipes(h1)</h1>
     <h2>Cookie Recipe</h2>
-    <p></p>
+    <p>
+      Darren Schrader
+      Aspiring Computer Programmer
+      Professional Dog Toe Nail Clipper
+    </p>
   </body>
 </html>
