added two lists

--- a/index.html
+++ b/index.html
@@ -5,11 +5,23 @@
   </head>
   <body>
     <h1>Darren's Recipes(h1)</h1>
-    <h2>Cookie Recipe</h2>
+
     <p>
       Darren Schrader
       Aspiring Computer Programmer
       Professional Dog Toe Nail Clipper
     </p>
+    
+    <h2>Cookie Recipe</h2>
+    <ul>
+      <li>3/4 cup sugar</li>
+      <li>1 cup butter</li>
+      <li>1 egg</li>
+    </ul>
+    
+    <ol>
+      <li>Preheat oven to 365</li>
+      <li>Mix ingredients into large bowl</li>
+    </ol>
   </body>
 </html>
