--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   
   <body>
-    <h1>Darren's Recipes(h1)</h1>
+    <h1>Darren's Cookies(h1)</h1>
 
     <p>
       Darren Schrader
@@ -20,6 +20,9 @@
     </div>
     
     <h2>Cookie Recipe</h2>
+    <div>
+      <img src="http://www.chick-fil-a.com/Media/Img/catalog/Food/XLarge/Cookie.png" alt="image of cookie"/>
+    </div>
     
     <div>
       <h3>Ingredient List</h3>
