--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     
     <h2>Cookie Recipe</h2>
     <div>
-      <img src="http://www.chick-fil-a.com/Media/Img/catalog/Food/XLarge/Cookie.png" alt="image of cookie"/>
+      <img src="http://www.chick-fil-a.com/Media/Img/catalog/Food/XLarge/Cookie.png" alt="image of cookie" height="100" width="150"/>
     </div>
     
     <div>
