--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </div>
     
     <h2>Cookie Recipe</h2>
-    <div>
+    <div class="image">
       <img src="http://www.chick-fil-a.com/Media/Img/catalog/Food/XLarge/Cookie.png" alt="image of cookie" height="100" width="150"/>
     </div>
     
